# ak2-lab2

./: .gitignore  CMakeLists.txt  Makefile  README.md
ninja-files/: build.ninja  rules.ninja
src/: main.cpp
